--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "js-cookie": "^3.0.5",
+    "laravel-echo": "^2.0.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-data-table-component": "^7.6.2",
